# fancy-twm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ahk/: FancyTWM.ahk
example/: config.toml  example.ahk
fancy-core/: Cargo.toml
fancy-core/src/: lib.rs  message.rs
fancy-ctl/: Cargo.toml
fancy-ctl/src/: ipc.rs  main.rs
fancy-twm/: Cargo.toml
fancy-twm/src/: app.rs  config.rs  hotkey.rs  ipc.rs  layout.rs  main.rs  server.rs  tray.rs  vd.rs
src/: app.rs  config.rs  hotkey.rs  main.rs  message.rs  tray.rs  vd.rs
