[package]
name = "fancy-twm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5.15"
ctrlc = "3.0"
dirs = "6.0.0"
global-hotkey = { version = "0.7.0", features = ["serde"] }
png = "0.18.1"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tray-icon = "0.22.0"
windows = { version = "0.62.2", features = [
    "Foundation",
    "Media_Control",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
